gimp: remove libbacktrace from makedepends used only in Linux, see https://github.com/msys2/MINGW-packages/pull/22926#issuecomment-2589754556

--- a/mingw-w64-gimp/PKGBUILD
+++ b/mingw-w64-gimp/PKGBUILD
@@ -74,7 +74,6 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
-             $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-libbacktrace")
              "${MINGW_PACKAGE_PREFIX}-libxslt"
              "${MINGW_PACKAGE_PREFIX}-qoi")
 source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${_pkgver}-${_pkgversuffix}.tar.xz"
@@ -119,6 +118,7 @@ build() {
     -Dgudev=disabled \
     -Dheadless-tests=disabled \
     -Djavascript=disabled \
+    -Dlibbacktrace=false \
     -Dlibunwind=false \
     -Dlinux-input=disabled \
     -Dxcursor=disabled \
