update AdaCore packages to 25.0.0
Except libadalang

--- a/mingw-w64-adasat/PKGBUILD
+++ b/mingw-w64-adasat/PKGBUILD
@@ -3,9 +3,8 @@
 _realname=adasat
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=24.0.0
-pkgrel=2
-
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="Implementation of a DPLL-based SAT solver in Ada (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -18,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gcc-ada")
 source=("https://github.com/AdaCore/AdaSAT/archive/v${pkgver}/adasat-${pkgver}.tar.gz")
-sha256sums=('7601774c928e5bb73971fce3b3942b4609a71386230690f8c130e9f708adbfd6')
+sha256sums=('b823969345cdd3678bf3cb1eb55592a0f74c2d99fc67303e187b4fbc960188a2')
 
 _library_types="static static-pic relocatable"
 _build_mode="prod"
@@ -51,5 +50,9 @@ package() {
       --build-name=${_library_type}
   done
 
-  install -Dm644 "${srcdir}/AdaSat-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  mkdir -p "${pkgdir}"${MINGW_PREFIX}/share/gpr/src
+  cp "${srcdir}"/AdaSat-${pkgver}/src/* "${pkgdir}"${MINGW_PREFIX}/share/gpr/src/
+
+  install -Dm644 "${srcdir}"/AdaSat-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
