--- a/mingw-w64-gpr/PKGBUILD
+++ b/mingw-w64-gpr/PKGBUILD
@@ -2,8 +2,8 @@
 _realname=gpr
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=24.0.0
-pkgrel=2
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="The framework for analyzing the GNAT Project (GPR) files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -22,22 +22,28 @@ depends=("${MINGW_PACKAGE_PREFIX}-gnatcoll-core"
          "${MINGW_PACKAGE_PREFIX}-python-funcy"
          "${MINGW_PACKAGE_PREFIX}-python-mako"
          "${MINGW_PACKAGE_PREFIX}-python-docutils")
-source=("https://github.com/AdaCore/gpr/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6a7d03d57e2070c2d59561771c8d0be3a4d2dcd2d862d212d06583dc59f64b3a')
+source=("https://github.com/AdaCore/gpr/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        001-fix-build-with-gcc-ada-14.patch)
+sha256sums=('2a0cdbb42cdd5440cbb06cbe3a2075c9ca7ccb82225bb3491509f930593ab33e'
+            'df61949e11734267e0ccf8072612cc33abf26b92f12e40041c9b18e7e228eefa')
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-  make setup prefix="${pkgdir}${MINGW_PREFIX}" GPR2KBDIR=${MINGW_PREFIX}/share/gprconfig
+  cd "${srcdir}"/${_realname}-${pkgver}
+  patch -p1 -i "${srcdir}"/001-fix-build-with-gcc-ada-14.patch
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
+  cp -r "${srcdir}"/${_realname}-${pkgver} "${srcdir}"/build-${MSYSTEM}
+  cd "${srcdir}"/build-${MSYSTEM}
+
+  make setup prefix="${pkgdir}${MINGW_PREFIX}" GPR2KBDIR=${MINGW_PREFIX}/share/gprconfig
 
   make
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${srcdir}"/build-${MSYSTEM}
 
   # Without -j1 concurrent gprinstall processes may crash:
   #
@@ -50,12 +56,9 @@ package() {
 
   # These conflict with the binaries from 'gprbuild'.
   #
-  rm "${pkgdir}${MINGW_PREFIX}"/bin/gprclean.exe
-  rm "${pkgdir}${MINGW_PREFIX}"/bin/gprconfig.exe
-  rm "${pkgdir}${MINGW_PREFIX}"/bin/gprinstall.exe
-  rm "${pkgdir}${MINGW_PREFIX}"/bin/gprls.exe
+  rm -fv "${pkgdir}${MINGW_PREFIX}"/bin/gprconfig.exe
 
   # Copy License Files
   install -Dm644 -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}" \
-    LICENSE COPYING3
+    LICENSE-lib LICENSE-tool
 }
