--- a/mingw-w64-gtkada/PKGBUILD
+++ b/mingw-w64-gtkada/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=gtkada
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=24.0.0
-pkgrel=2
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="Ada bindings for the GTK+ graphical library. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -16,10 +16,16 @@ msys2_references=(
 license=('spdx:GPL-3.0-or-later with GCC-exception-3.1')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild-bootstrap"
              "${MINGW_PACKAGE_PREFIX}-autotools")
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-ada"
-         "${MINGW_PACKAGE_PREFIX}-gtk3")
+depends=("${MINGW_PACKAGE_PREFIX}-cairo"
+         "${MINGW_PACKAGE_PREFIX}-gcc-ada"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-gdk-pixbuf2"
+         "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
+         "${MINGW_PACKAGE_PREFIX}-glib2"
+         "${MINGW_PACKAGE_PREFIX}-gtk3"
+         "${MINGW_PACKAGE_PREFIX}-pango")
 source=("https://github.com/AdaCore/gtkada/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('c75202ae6c37c5556b3f1b2bc4297fe53730d5ede55c91e9f4a11c59c4833844')
+sha256sums=('bc6614072d0733bc112c4d0b0f0d6ff3fc0eb8021761efec8d9a00a1975dfec9')
 
 build() {
   [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
@@ -31,14 +37,13 @@ build() {
   fi
   CFLAGS+=" -Wno-int-conversion -Wno-implicit-function-declaration"
   ../${_realname}-${pkgver}/configure \
-    --build=${MINGW_CHOST} \
     --prefix=${MINGW_PREFIX} \
     --enable-shared \
     --disable-static \
     --disable-gtktest \
     --with-GL=no
 
-  make -j1
+  make || make -j1
 }
 
 package() {
