--- a/mingw-w64-gnatcoll-core/PKGBUILD
+++ b/mingw-w64-gnatcoll-core/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 replaces=("${MINGW_PACKAGE_PREFIX}-gnatcoll")
 conflicts=("${MINGW_PACKAGE_PREFIX}-gnatcoll")
-pkgver=24.0.0
-pkgrel=2
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="GNAT Components Collection - Core packages (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -16,12 +16,14 @@ msys2_references=(
   'gentoo: dev-ada/gnatcoll-core'
 )
 license=('spdx:GPL-3.0-or-later WITH GCC-exception-3.1')
-makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild"
+             "${MINGW_PACKAGE_PREFIX}-python"
+             "rsync")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gcc-ada"
          "${MINGW_PACKAGE_PREFIX}-libgpr")
 source=("https://github.com/AdaCore/gnatcoll-core/archive/v${pkgver}/gnatcoll-core-${pkgver}.tar.gz")
-sha256sums=('0b3ef5687d9d7be115d90143a3b9da2c30779ea8bfe0a6226bedc7715d28fd8d')
+sha256sums=('30ebfafcaa44fc20cee50c6869f024bb670e7ea62d44036ce51e528d19de8b9e')
 
 prepare() {
   echo "${pkgver}" > "${srcdir}/gnatcoll-core-${pkgver}/version_information"
