libjudy: prefer Debian rather than netdata

--- a/mingw-w64-libjudy/PKGBUILD
+++ b/mingw-w64-libjudy/PKGBUILD
@@ -14,15 +14,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
 url='http://judy.sourceforge.net'
 source=("https://downloads.sourceforge.net/judy/Judy-${pkgver}.tar.gz"
         "0001-judy-no-undefined.patch"
-        # https://github.com/netdata/libjudy
-        "https://github.com/netdata/libjudy/commit/e95874a4e271d0f8535ab78862af3d57d33e9d1e.patch"
+        # https://sources.debian.org/patches/judy/latest/
+        "https://sources.debian.org/data/main/j/judy/1.0.5-5.1/debian/patches/04_fix_undefined_bahavior_during_aggressive_loop_optimizations.patch"
         # https://sourceforge.net/p/judy/patches/6/
         "https://sourceforge.net/p/judy/patches/6/attachment/0001-automake-Makefile.am-use-relocatable-srcdir-when-app.patch"
         "https://sourceforge.net/p/judy/patches/6/attachment/0002-doc-Makefile.am-mkdir-p-man-man3-and-parallel-buildi.patch"
         "https://sourceforge.net/p/judy/patches/6/attachment/0003-Win64-Fixup-WORD_T-and-UL-suffixes-for-llp64-data-mo.patch")
 sha256sums=('d2704089f85fdb6f2cd7e77be21170ced4b4375c03ef1ad4cf1075bd414a63eb'
             '4ab00dee64c79c3296ae7bc12429411bf7e361aedd583f268c0ad40c2083080e'
-            '25fc4d81bd7625e15b46472bf8c3380d046db1e4b99a2c2240b19d12fb76e3e0'
+            'e70bab80362bb72f93f39d684b496a2dadb46f8da2469b76a9d5d2a064fd7274'
             '96e0ad7536f45e9bbbf2f6e9f6de12f74f1a9c349fcbd0d44db52b3c1231140a'
             '73da528014ee64b239d5db2aaf3d69682424e9cf6318dbc034e2e52e05deecff'
             '30dfe143bda003cbcfe90d90328f8caf8122406145d7c03f3c1b19620a11359f')
@@ -39,9 +39,9 @@ prepare() {
 
   apply_patch_with_msg 0001-judy-no-undefined.patch
 
-  # Apply patches from netdata
+  # Apply patches from Debian
   apply_patch_with_msg \
-    e95874a4e271d0f8535ab78862af3d57d33e9d1e.patch
+    04_fix_undefined_bahavior_during_aggressive_loop_optimizations.patch
 
   # Apply patches from SourceForge
   apply_patch_with_msg \
