Rename to just judy, like in other distros

--- a/mingw-w64-judy/PKGBUILD
+++ b/mingw-w64-judy/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Yang Kun <ikspress@outlook.com>
 
-_realname=libjudy
+_realname=judy
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.0.5
