eza: update to 0.20.17

--- a/mingw-w64-eza/PKGBUILD
+++ b/mingw-w64-eza/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=eza
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.20.16
-pkgrel=2
+pkgver=0.20.17
+pkgrel=1
 pkgdesc="A modern, maintained replacement for ls (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64' 'mingw64')
@@ -22,10 +22,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: for file icons")
 options=('!strip')
-source=("${_realname}::git+${msys2_repository_url}.git#tag=v${pkgver}"
-        "https://github.com/eza-community/eza/commit/7241ea4d128ca47b8f5e756a65fa3d4f1d5b5ce7.patch")
-sha256sums=('7f34210712b40a4e6815450a3518459cbf00dd0ea21f0abced7b6c870738ac9c'
-            'ef387f0f9848a387bae1b412e2586bed164050a8bcdaac865b591a3b1691ffcd')
+source=("${_realname}::git+${msys2_repository_url}.git#tag=v${pkgver}")
+sha256sums=('8d95c280582795d7c22b5e9fe4542f7cb9b7fdcb98fba2d582fe012c0e90904f')
 
 _env() {
   export LIBGIT2_NO_VENDOR=1
