vtk: enable more modules
These modules are required when trying to build ParaView.

--- a/mingw-w64-vtk/PKGBUILD
+++ b/mingw-w64-vtk/PKGBUILD
@@ -5,7 +5,7 @@ _realname=vtk
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=9.4.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A software system for 3D computer graphics, image processing and visualization (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -196,6 +196,10 @@ build() {
     -DVTK_BUILD_ALL_MODULES=ON \
     -DVTK_GROUP_ENABLE_MPI=NO \
     -DVTK_GROUP_ENABLE_Web=NO \
+    -DVTK_MODULE_ENABLE_VTK_FiltersParallelVerdict=WANT \
+    -DVTK_MODULE_ENABLE_VTK_FiltersTemporal=WANT \
+    -DVTK_MODULE_ENABLE_VTK_IOERF=WANT \
+    -DVTK_MODULE_ENABLE_VTK_IOFDS=WANT \
     -DVTK_MODULE_ENABLE_VTK_RenderingOpenXRRemoting=NO \
     -DVTK_MODULE_ENABLE_VTK_RenderingZSpace=NO \
     -DVTK_USE_EXTERNAL=ON \
