paraview: update to 5.13.2
Depend on VTK package.

--- a/mingw-w64-paraview/PKGBUILD
+++ b/mingw-w64-paraview/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=paraview
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=5.13.1
-pkgrel=4
+pkgver=5.13.2
+pkgrel=1
 pkgdesc="Parallel Data Analysis and Visualization Application based on VTK. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,63 +15,46 @@ msys2_references=(
 )
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-double-conversion"
          "${MINGW_PACKAGE_PREFIX}-cgns"
          "${MINGW_PACKAGE_PREFIX}-expat"
-         "${MINGW_PACKAGE_PREFIX}-fmt"
          "${MINGW_PACKAGE_PREFIX}-gdal"
          "${MINGW_PACKAGE_PREFIX}-gl2ps"
-         "${MINGW_PACKAGE_PREFIX}-glew"
          "${MINGW_PACKAGE_PREFIX}-hdf5"
-         "${MINGW_PACKAGE_PREFIX}-jsoncpp"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libogg"
          "${MINGW_PACKAGE_PREFIX}-liblas"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtheora"
-         "${MINGW_PACKAGE_PREFIX}-libtiff"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
-         "${MINGW_PACKAGE_PREFIX}-lz4"
          "${MINGW_PACKAGE_PREFIX}-netcdf"
          "${MINGW_PACKAGE_PREFIX}-openturns"
          "${MINGW_PACKAGE_PREFIX}-pdal"
          #"${MINGW_PACKAGE_PREFIX}-pegtl" https://gitlab.kitware.com/vtk/vtk/-/issues/18151
          "${MINGW_PACKAGE_PREFIX}-protobuf"
          "${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-pugixml"
-         "${MINGW_PACKAGE_PREFIX}-qt5-base"
-         "${MINGW_PACKAGE_PREFIX}-qt5-svg"
-         "${MINGW_PACKAGE_PREFIX}-qt5-tools"
-         "${MINGW_PACKAGE_PREFIX}-tbb"
-         $([[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-verdict")
-         "${MINGW_PACKAGE_PREFIX}-xz"
-         "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
-         "${MINGW_PACKAGE_PREFIX}-zlib")
+         "${MINGW_PACKAGE_PREFIX}-qt6-5compat"
+         "${MINGW_PACKAGE_PREFIX}-qt6-base"
+         "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+         "${MINGW_PACKAGE_PREFIX}-qt6-tools"
+         "${MINGW_PACKAGE_PREFIX}-vtk")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-qt5-xmlpatterns"
              "${MINGW_PACKAGE_PREFIX}-python-numpy"
              "${MINGW_PACKAGE_PREFIX}-cli11"
-             "${MINGW_PACKAGE_PREFIX}-eigen3"
-             "${MINGW_PACKAGE_PREFIX}-fast_float"
-             "${MINGW_PACKAGE_PREFIX}-libharu"
-             "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
-             "${MINGW_PACKAGE_PREFIX}-utf8cpp")
+             "${MINGW_PACKAGE_PREFIX}-nlohmann-json")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-numpy"
             "${MINGW_PACKAGE_PREFIX}-python-matplotlib")
 source=("https://www.paraview.org/files/v${pkgver%.*}/ParaView-v${pkgver}.tar.xz"
-        "001-dll-export-some-vtk-functions.patch"
-        "002-no-exact-version-for-fast_float.patch"
-        "003-CellAttribute-Fix-mingw-build.patch::https://gitlab.kitware.com/vtk/vtk/-/commit/5a7de249.patch"
-        "004-fix-build-with-fmt-11.patch"
-        "005-avoid-file-conflict-with-vtk.patch")
-sha256sums=('a16503ce37b999c2967d84234596e7bf67ac98221851a288bb1399c7e1dc2004'
-            'a9b9292be90c259f0aa058e3f4a7a08b6218f20e6cb2a71e214acda2d2302a50'
-            '411b0521fcd2864acae0af20ba6334f69f7c605c9e31996529f64aa749d61065'
-            '784d9345ebb1a83841970df34d743344189604457270df0f594669639a718ec8'
-            'c92343b01c50a93805c7068058416cf010cceba6700e4cc16b3be98598d2295f'
-            '374c7fbca1d225fdb7eafd646937c202cb0427acd1558f2d8411ab0c394d6287')
+        "001-replace-vtk-glew-with-vtk-glad.patch::https://gitlab.kitware.com/paraview/paraview/-/commit/6e762b79d09ce3188992695a3817d5e166fec47f.patch"
+        "002-replace-vtk-opengl-with-vtk-glad.patch::https://gitlab.kitware.com/paraview/paraview/-/commit/53bcd8cd82bfcd43813fc493bde7726272a28f40.patch"
+        "003-replace-glew-includes-with-glad.patch::https://gitlab.kitware.com/paraview/paraview/-/commit/a5fe98f96e286e576235abb53053798cfd53512c.patch"
+        "004-forward-opengl-context-init.patch::https://gitlab.kitware.com/paraview/paraview/-/commit/455fd10d7b0445e8cb63184665bf2b5a3810be16.patch")
+sha256sums=('4e116250f8e1a9c480f97c5696c9cd72b4d4998b039ca46da8b224f27445f13e'
+            'a24c6162eda682d4eeb750432915711884e85dba6a55bf6222862ae0aa862611'
+            'f8f1a79549e626cf25ea0f6ee9a3386a642690d5423d798833d4092f2a38c061'
+            'eeb21c4afd826860173f4aa13b240eb86dc312a5601c566cd0880bd8f65255f5'
+            'f87de9565bc6ef6b149b62c911a4d723ca6f6ae783a60ff66a1039080190f841')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -84,18 +67,11 @@ apply_patch_with_msg() {
 prepare() {
   cd "${srcdir}"/ParaView-v${pkgver}
 
-  cd VTK
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    # Copied from mingw-w64-vtk/007-dll-export-some-functions.patch
-    apply_patch_with_msg \
-      001-dll-export-some-vtk-functions.patch
-  fi
-
   apply_patch_with_msg \
-    002-no-exact-version-for-fast_float.patch \
-    003-CellAttribute-Fix-mingw-build.patch \
-    004-fix-build-with-fmt-11.patch \
-    005-avoid-file-conflict-with-vtk.patch
+    001-replace-vtk-glew-with-vtk-glad.patch \
+    002-replace-vtk-opengl-with-vtk-glad.patch \
+    003-replace-glew-includes-with-glad.patch \
+    004-forward-opengl-context-init.patch
 }
 
 build() {
@@ -106,10 +82,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
-  fi
-
-  if [[ ${MSYSTEM} == MINGW64 ]]; then
-    _extra_config+=("-DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF")
   fi
 
   _pyver=$(${MINGW_PREFIX}/bin/python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
@@ -133,11 +105,7 @@ build() {
       -DPARAVIEW_BUILD_WITH_EXTERNAL=ON \
       -DPARAVIEW_PYTHON_SITE_PACKAGES_SUFFIX="lib/python${_pyver}/site-packages/pv/" \
       -DPARAVIEW_IGNORE_CMAKE_CXX11_CHECKS=ON \
-      -DVTK_SMP_IMPLEMENTATION_TYPE=TBB \
-      -DVTK_MODULE_USE_EXTERNAL_VTK_exprtk=OFF \
-      -DVTK_MODULE_USE_EXTERNAL_VTK_ioss=OFF \
-      -DVTK_MODULE_USE_EXTERNAL_VTK_pegtl=OFF \
-      -DVTK_MODULE_USE_EXTERNAL_VTK_token=OFF \
+      -DPARAVIEW_USE_EXTERNAL_VTK=ON \
       -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python.exe \
       ../ParaView-v${pkgver}
 
