--- a/mingw-w64-libgee/PKGBUILD
+++ b/mingw-w64-libgee/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libgee
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.20.6
+pkgver=0.20.8
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,14 +13,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-vala"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection")
-license=("LGPL2+")
+license=('spdx:LGPL-2.1-or-later')
 url="https://wiki.gnome.org/Projects/Libgee"
 msys2_references=(
   "cpe: cpe:2.3:a:gnome:libgee"
 )
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"
         0001-change-pkg-config-invocation.patch)
-sha256sums=('1bf834f5e10d60cc6124d74ed3c1dd38da646787fbf7872220b8b4068e476d4d'
+sha256sums=('189815ac143d89867193b0c52b7dc31f3aa108a15f04d6b5dca2b6adfad0b0ee'
             'c581568b4538666d6f35b3b159184c244b58ffcd8cf6fc5f7809842478f2d01d')
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libgee"
 
