libvirt: update to 11.0.0

--- a/mingw-w64-libvirt/PKGBUILD
+++ b/mingw-w64-libvirt/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libvirt
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-_pkgdev=10.10.0
+_pkgdev=11.0.0
 pkgver=${_pkgdev//-/}
 pkgrel=1
 pkgdesc="Windows libvirt virtualization library (mingw-w64)"
@@ -39,9 +39,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-libxslt"
              rpcsvc-proto
              perl)
-source=("https://libvirt.org/sources/${_realname}-${_pkgdev}.tar.xz"{,.asc})
-sha256sums=('e1bd7bd31b7c0d0ae073dec050bb5b0232b3e4adebdc58ea82fe8b366c765796'
-            'SKIP')
+source=("https://libvirt.org/sources/${_realname}-${_pkgdev}.tar.xz"{,.asc}
+        0001-meson-drop-path-for-python.patch)
+sha256sums=('01a176ff4042ad58cf83c09fe0925d6bc8eed0ecce1e0ee19b8ef4c1ffa3806e'
+            'SKIP'
+            'ec09fa0104984b669c749fc3da41c1d22d329e28b5176d03e32d7d97cabf7eee')
 validpgpkeys=('453B65310595562855471199CA68BE8010084C9C') # Jiří Denemark <jdenemar@redhat.com>
 noextract=(${_realname}-${_pkgdev}.tar.xz)
 
@@ -56,6 +58,10 @@ apply_patch_with_msg() {
 
 prepare() {
   tar -C "${srcdir}" --exclude=tests -xJf "${srcdir}"/${_realname}-${_pkgdev}.tar.xz || true
+
+  cd "${_realname}-${_pkgdev%-*}"
+  apply_patch_with_msg \
+    0001-meson-drop-path-for-python.patch
 }
 
 build() {
