--- a/mingw-w64-tzdata/PKGBUILD
+++ b/mingw-w64-tzdata/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=tzdata
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2024b
+pkgver=2025a
 pkgrel=1
 pkgdesc="Sources for time zone and daylight saving time data (mingw-w64)"
 arch=('any')
@@ -13,7 +13,7 @@ license=('custom: public domain')
 options=('!emptydirs')
 makedepends=('tzcode')
 source=(https://www.iana.org/time-zones/repository/releases/${_realname}${pkgver}.tar.gz{,.asc})
-sha512sums=('0d86686e215672343debb3471b7e7ccb8a27f063f085c9b532d5e0470377843daa0dfb6aee0db4fb9068dd52810c69aeee914a1a7c7e603fdecda7e855020193'
+sha512sums=('93b8f939d39bdfe451e262666f9099c529c96c49d14c08e3611560ca660e12e16d08a22b145d615e00570fb194881618d6f9a0a617c119ab447be03279d747c3'
             'SKIP')
 validpgpkeys=('7E3792A9D8ACF7D633BC1588ED97E90E62AA7E34') # Paul Eggert <eggert@cs.ucla.edu>
 
