qtkeychain: update to 0.15.0

--- a/mingw-w64-qtkeychain/PKGBUILD
+++ b/mingw-w64-qtkeychain/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qtkeychain
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-qt5"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-qt6")
-pkgver=0.14.3
+pkgver=0.15.0
 pkgrel=1
 pkgdesc='Platform-independent Qt API for storing passwords securely. (mingw-w64)'
 arch=('any')
@@ -19,8 +19,28 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-clang-libs"
              "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools")
-source=(https://github.com/frankosterfeld/qtkeychain/archive/$pkgver/$_realname-$pkgver.tar.gz)
-sha256sums=('a22c708f351431d8736a0ac5c562414f2b7bb919a6292cbca1ff7ac0849cb0a7')
+source=("https://github.com/frankosterfeld/qtkeychain/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
+        0001-qtkeychain-cmake-remove-utf8.patch
+        0002-qtkeychain-include-cmath.patch)
+sha256sums=('f4254dc8f0933b06d90672d683eab08ef770acd8336e44dfa030ce041dc2ca22'
+            '0742745489f28d1a806b616e716462ba3f17c910bc3e627a8aaebb3538466d9b'
+            '7b22914e8fe0ccc3fea3be66fbf1081c2aff78311704198b75a1c3fd56a13a50')
+
+_apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -p1 -i "${srcdir}/${_patch}"
+  done
+}
+
+prepare() {
+  cd "${_realname}-${pkgver}"
+
+  _apply_patch_with_msg \
+    0001-qtkeychain-cmake-remove-utf8.patch \
+    0002-qtkeychain-include-cmath.patch
+}
 
 build() {
   # qtkeychain-qt5
