llvm: update to 19.1.7 and add import libs fix for LLD

--- a/mingw-w64-llvm/PKGBUILD
+++ b/mingw-w64-llvm/PKGBUILD
@@ -28,7 +28,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-llvm"
          "${MINGW_PACKAGE_PREFIX}-compiler-rt"
          $( (( _clangprefix )) && echo "${MINGW_PACKAGE_PREFIX}-gcc-compat" )
          "${MINGW_PACKAGE_PREFIX}-lld")
-_version=19.1.6
+_version=19.1.7
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -77,34 +77,45 @@ source=("${_url}/llvm-${pkgver}.src.tar.xz"{,.sig}
         # 0301-0399 -> lld
         "0303-ignore-new-bfd-options.patch"
         # 0401-0499 -> clang-tools-extra
+        # 9901-9999 -> whole tree
+        "0901-wholearchive-import-libs.patch::https://github.com/llvm/llvm-project/commit/4a4a8a1476b1386b523dc5b292ba9a5a6748a9cf.patch"
         )
-sha256sums=('ad1a3b125ff014ded290094088de40efb9193ce81a24278184230b7d401f8a3e'
+sha256sums=('96f833c6ad99a3e8e1d9aca5f439b8fd2c7efdcf83b664e0af1c0712c5315910'
             'SKIP'
-            '6358cbb3e14687ca2f3465c61cffc65589b448aaa912ec2c163ef9fc046e8a89'
+            '11e5e4ecab5338b9914de3b83a4622cb200de466b7c56ba675afb72fa7d64675'
             'SKIP'
-            '417a7d0048d8eb62dbaa8461f1fd474eb6493b09e14d050b39cc1f051e8b71d1'
+            '430b088bf820550090a6cf0eec67183d045273c18b3f1d6c5207e46d93391be7'
             'SKIP'
-            '0d4f312e1419152282c267e6b6a1fa5914a7a0c753a5e926bee1c8c28e614ae4'
+            'c12b6e764202c615c1a3af9a13d477846878757ae0e29e5f8979215a6958fffc'
             'SKIP'
-            '44fa50556cefbe3796e8256536267ee2f34ced5f3c1492473bccd75449cadbe6'
+            '630bf0f31b210e89fd7869bdfd6c376d010fc3b72ee42f08058435035c432e42'
             'SKIP'
-            '9c7ec82d9a240dc2287b8de89d6881bb64ceea0dcd6ce133c34ef65bda22d99e'
+            '11c5a28f90053b0c43d0dec3d0ad579347fc277199c005206b963c19aae514e3'
             'SKIP'
-            '0e8048333bab2ba3607910e5d074259f08dccf00615778d03a2a55416718eb45'
+            'b96deca1d3097c7ffd4ff2bb904a50bdd56bec7ed1413ffb0d1d01af87b72c12'
             'SKIP'
             'eb03df53671df6627768141b3aaa76abe176a14e5e47911c97bec544387c4aff'
-            'ff8bf96fae9531cf6231b502e8c2f38843f826a9dc7e0d98a37cb80fddd36cf4'
+            '7cdf15c7e9c13ab99c42b4fafb15d871b22558f751729bb7173ce3edeffc8db8'
             '790eb0fccb4ef29c3795bceb8a62c8f4ecd0bdd6c49b2812352b04cfbc552342'
             '76d2a88733cebb1f01b766ff2ab91a9e095bae1d2e4cc18c1ffcf21fd095efc4'
             '715cb8862753854b2d9256e0b70003e2d1f57083d83eaeaf5a095fc72b8a4e26'
             '2770cadf8ccf6b31aece6aee8f76dceb71e6e9d01fdf3be74c3743480ce34899'
-            'fd0253879cc5e31857f57307e6105e56493358e35d7c4540e0b476be607ab94e')
+            'fd0253879cc5e31857f57307e6105e56493358e35d7c4540e0b476be607ab94e'
+            '630806c9f232d7755ea8fb2c9e2110a511676d728a4f39e91e4867d1e460c1da')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
               'D574BD5D1D0E98895E3BF90044F2485E45D59042') # Tobias Hieta
 noextract=(clang-${pkgver}.src.tar.xz)
 
 apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
+
+apply_git_patch_with_msg() {
   for _patch in "$@"
   do
     msg2 "Applying ${_patch}"
@@ -161,6 +172,12 @@ prepare() {
 
   # Patch clang-tools-extra
   cd "${srcdir}"/clang-tools-extra
+
+  # Patch whole tree
+  cd "${srcdir}"
+
+  apply_git_patch_with_msg \
+      "0901-wholearchive-import-libs.patch"
 }
 
 build() {
