gdb: update to 16.1

--- a/mingw-w64-gdb/PKGBUILD
+++ b/mingw-w64-gdb/PKGBUILD
@@ -4,9 +4,9 @@
 _realname=gdb
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-multiarch")
-pkgver=15.2
-pkgrel=2
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-multiarch"))
+pkgver=16.1
+pkgrel=1
 pkgdesc="GNU Debugger (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
@@ -31,7 +31,6 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-pygments: for syntax highlighting")
 checkdepends=('dejagnu' 'bc')
-# gmp, mpfr and xz (lzma) are linked statically
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-iconv")
@@ -42,7 +41,7 @@ source=(https://ftp.gnu.org/gnu/${_realname}/${_realname}-${pkgver}.tar.xz{,.sig
         '0004-Python-Configure-path-fixes.patch'
         '0005-W32-Always-check-USERPROFILE-if-HOME-is-not-set.patch')
 validpgpkeys=('F40ADB902B24264AA42E50BF92EDB04BFF325CF3')
-sha256sums=('83350ccd35b5b5a0cba6b334c41294ea968158c573940904f00b92f76345314d'
+sha256sums=('c2cc5ccca029b7a7c3879ce8a96528fdfd056b4d884f2b0511e8f7bc723355c6'
             'SKIP'
             '428cda7dcc107c236225ae89704390b0f1e70c276b5ca6b1741988f384b21d62'
             'cf12bce0b988765ecac26a6895238c48ef9676d6fc01f986f75dcbc8bd8d3f07'
@@ -121,7 +120,9 @@ do_build() {
 
 build() {
   do_build
-  do_build -multiarch --enable-targets=all
+  if [[ ${CARCH} != i686 ]]; then
+    do_build -multiarch --enable-targets=all
+  fi
 }
 
 package_gdb() {
