--- a/mingw-w64-fontconfig/PKGBUILD
+++ b/mingw-w64-fontconfig/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=fontconfig
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.15.0
-pkgrel=2
+pkgver=2.16.0
+pkgrel=1
 pkgdesc="A library for configuring and customizing font access (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,23 +23,15 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-freetype")
 install=${_realname}-${MSYSTEM}.install
 source=("https://www.freedesktop.org/software/fontconfig/release/fontconfig-${pkgver}.tar.xz"
-        0010-fix-relocation.patch
         0011-conf-copy-instead-of-symlink.patch
-        fontconfig.hook.in
-        https://gitlab.freedesktop.org/fontconfig/fontconfig/-/commit/a76b95105ca26c600279b2daf4bd43b37a918823.patch)
-sha256sums=('63a0658d0e06e0fa886106452b58ef04f21f58202ea02a94c39de0d3335d7c0e'
-            '1506f01dcc7c8b80a9e7fbe56720742bd9134c8e4c3321579fd44dbe1aac028d'
+        fontconfig.hook.in)
+sha256sums=('6a33dc555cc9ba8b10caf7695878ef134eeb36d0af366041f639b1da9b6ed220'
             '73ed74a1f4624466084d219e2fbc0d5780da9f63763f1307629251e58cccf2cd'
-            'ad4ce48983045d7f39b40ca9e04d4be2eaa9177b89dcc516388d779c131a88bc'
-            'c225c156c4732a492c9588c8d33705ca29af6f3195f201f4012b09ff012f1831')
+            'ad4ce48983045d7f39b40ca9e04d4be2eaa9177b89dcc516388d779c131a88bc')
 
 prepare() {
   cd "${_realname}-${pkgver}"
 
-  # backport because it seems relevant for us
-  patch -p1 -i "${srcdir}"/a76b95105ca26c600279b2daf4bd43b37a918823.patch
-
-  patch -p1 -i "${srcdir}"/0010-fix-relocation.patch
   patch -p1 -i "${srcdir}"/0011-conf-copy-instead-of-symlink.patch
 }
 
