geographiclib: update to 2.5

--- a/mingw-w64-geographiclib/PKGBUILD
+++ b/mingw-w64-geographiclib/PKGBUILD
@@ -1,45 +1,48 @@
 # Maintainer: Konstantin Podsvirov <konstantin@podsvirov.pro>
 
-_realname=GeographicLib
-_pkgname=geographiclib
-pkgbase=mingw-w64-${_pkgname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_pkgname}")
-pkgver=1.52
-pkgrel=2
+_realname=geographiclib
+pkgbase=mingw-w64-${_realname}
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+pkgver=2.5
+pkgrel=1
 pkgdesc="Set of C++ classes for conversions between geographic, UTM, UPS, MGRS, geocentric, and local cartesian coordinates, for gravity, geoid height, and geomagnetic field calculations and for solving geodesic problems (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://geographiclib.sourceforge.io/"
+msys2_repository_url='https://github.com/geographiclib/geographiclib'
 license=('custom') # MIT/X11
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-doxygen")
-options=('!strip' '!buildflags')
-
-source=(https://downloads.sourceforge.net/project/geographiclib/distrib/${_realname}-${pkgver}.tar.gz)
-sha256sums=('5d4145cd16ebf51a2ff97c9244330a340787d131165cfd150e4b2840c0e8ac2b')
+source=(${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('347319e3dc5dd2d58116ff1ecb8c0ae11c9f095c655fe289992b3208bc7a32fc')
 
 build() {
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
+  declare -a extra_config
+  if check_option "debug" "n"; then
+    extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake.exe \
-    -G"MSYS Makefiles" \
-    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCOMMON_INSTALL_PATH=ON \
-    -DGEOGRAPHICLIB_DOCUMENTATION=ON \
-    -DGEOGRAPHICLIB_LIB_TYPE=BOTH \
-    ../${_realname}-${pkgver}
+    cmake \
+      -GNinja \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      "${extra_config[@]}" \
+      -DBUILD_{SHARED,STATIC}_LIBS=ON \
+      -DBUILD_DOCUMENTATION=ON \
+      -DBUILD_BOTH_LIBS= ON \
+      -S "${_realname}-${pkgver}" \
+      -B "build-${MSYSTEM}"
 
-  make
+  cmake --build "build-${MSYSTEM}"
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
 
-  make DESTDIR="${pkgdir}" install
-
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_pkgname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
 }
