sox: Remove packages in makedepends that are in depends

--- a/mingw-w64-sox/PKGBUILD
+++ b/mingw-w64-sox/PKGBUILD
@@ -16,25 +16,9 @@ msys2_references=(
 )
 license=("GPL")
 makedepends=(autoconf-archive git
-             "${MINGW_PACKAGE_PREFIX}-autotools"
-             ${MINGW_PACKAGE_PREFIX}-flac
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             ${MINGW_PACKAGE_PREFIX}-gsm
-             ${MINGW_PACKAGE_PREFIX}-id3lib
-             ${MINGW_PACKAGE_PREFIX}-lame
-             ${MINGW_PACKAGE_PREFIX}-libao
-             ${MINGW_PACKAGE_PREFIX}-libid3tag
-             ${MINGW_PACKAGE_PREFIX}-libmad
-             ${MINGW_PACKAGE_PREFIX}-libpng
-             ${MINGW_PACKAGE_PREFIX}-libsndfile
              ${MINGW_PACKAGE_PREFIX}-autotools
-             ${MINGW_PACKAGE_PREFIX}-libvorbis
-             ${MINGW_PACKAGE_PREFIX}-opencore-amr
-             ${MINGW_PACKAGE_PREFIX}-opusfile
-             ${MINGW_PACKAGE_PREFIX}-pkgconf
-             ${MINGW_PACKAGE_PREFIX}-twolame
-             ${MINGW_PACKAGE_PREFIX}-vo-amrwbenc
-             ${MINGW_PACKAGE_PREFIX}-wavpack)
+             ${MINGW_PACKAGE_PREFIX}-cc
+             ${MINGW_PACKAGE_PREFIX}-pkgconf)
 depends=(${MINGW_PACKAGE_PREFIX}-gcc-libs
              ${MINGW_PACKAGE_PREFIX}-flac
              ${MINGW_PACKAGE_PREFIX}-gsm
