--- a/mingw-w64-sox/PKGBUILD
+++ b/mingw-w64-sox/PKGBUILD
@@ -4,9 +4,9 @@ _realname=sox
 _base_ver=14.4.2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-# https://sourceforge.net/p/sox/code/ci/07de8a77a862e6800b95a8d3a61c6b4e41362755/
-pkgver=14.4.2.r3203.07de8a77
-pkgrel=9
+# https://sourceforge.net/p/sox/code/ci/f3094754a7c2a7e55c35621d20fa9945736e72df/
+pkgver=14.4.2.r3239.f3094754
+pkgrel=1
 pkgdesc="SoX is the Swiss Army Knife of sound processing utilities (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -36,9 +36,9 @@ depends=(${MINGW_PACKAGE_PREFIX}-gcc-libs
              ${MINGW_PACKAGE_PREFIX}-twolame
              ${MINGW_PACKAGE_PREFIX}-vo-amrwbenc
              ${MINGW_PACKAGE_PREFIX}-wavpack)
-source=("${_realname}"::"git+https://git.code.sf.net/p/sox/code#commit=07de8a77a862e6800b95a8d3a61c6b4e41362755"
+source=("${_realname}"::"git+https://git.code.sf.net/p/sox/code#commit=f3094754a7c2a7e55c35621d20fa9945736e72df"
         "0001-ucrt-no-rewind-pipe.patch")
-sha256sums=('SKIP'
+sha256sums=('affffe2c3901b4859beb41bfc1d663ab959c968a3635a448359d50b1142a3d6a'
             '693e7dcd737ea6c5137f2827518ff08549841d480cde00c4f3f505b2657c71f0')
 
 pkgver() {
