python-scikit-image: remove unused optdepends on freeimage
scikit-image removed support for freeimage in 0.13

--- a/mingw-w64-python-scikit-image/PKGBUILD
+++ b/mingw-w64-python-scikit-image/PKGBUILD
@@ -6,7 +6,7 @@ _realname=scikit-image
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.25.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Image processing routines for SciPy (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -38,7 +38,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest>=7.0"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-cov>=2.11.0"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-localserver"
   "${MINGW_PACKAGE_PREFIX}-python-pooch")
-optdepends=("${MINGW_PACKAGE_PREFIX}-freeimage: for reading various types of image file formats"
+optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pyamg: fast cg_mg mode of random walker segmentation")
 options=('!strip' '!emptydirs')
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
