ogre3d: remove freeimage plugin
freeimage is unmaintained and dangerous, see
https://gitlab.archlinux.org/archlinux/packaging/packages/freeimage/-/issues/1

The plugin was already deprecated in ogre3d, so hopefully not a big loss.

--- a/mingw-w64-ogre3d/PKGBUILD
+++ b/mingw-w64-ogre3d/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=14.3.2
 _imgui_ver=1.91.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform 3D game engine (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,7 +22,6 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
              "${MINGW_PACKAGE_PREFIX}-swig"
              "${MINGW_PACKAGE_PREFIX}-assimp"
-             "${MINGW_PACKAGE_PREFIX}-freeimage"
              #"${MINGW_PACKAGE_PREFIX}-openexr" https://github.com/OGRECave/ogre/issues/2179
              "${MINGW_PACKAGE_PREFIX}-pugixml"
              "${MINGW_PACKAGE_PREFIX}-qt6-base")
@@ -36,7 +35,6 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-winpthreads"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 optdepends=("${MINGW_PACKAGE_PREFIX}-assimp"
-            "${MINGW_PACKAGE_PREFIX}-freeimage"
             #"${MINGW_PACKAGE_PREFIX}-openexr"
             "${MINGW_PACKAGE_PREFIX}-python: python bindings"
             "${MINGW_PACKAGE_PREFIX}-pugixml: XML converter"
@@ -45,7 +43,6 @@ options=('!strip')
 source=("https://github.com/OGRECave/ogre/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         https://github.com/ocornut/imgui/archive/v${_imgui_ver}/imgui-${_imgui_ver}.tar.gz
         001-use-soversion.patch
-        002-link-shared-freeimage.patch
         004-use-mingw-w64-directx.patch
         010-missing-include.patch
         015-export-symbols-samples-plugin.patch
@@ -53,7 +50,6 @@ source=("https://github.com/OGRECave/ogre/archive/v${pkgver}/${_realname}-${pkgv
 sha256sums=('a3a052dc14e7ce273e86e18c900be4b8c35f9b90bd4613843dc18b0650b19ae2'
             'a3c4fd857a0a48f6edad3e25de68fa1e96d2437f1665039714d1de9ad579b8d0'
             '81fbe2f951be7f5b5bded24a3050be3188e164d321df9124b5abfb543234a128'
-            '67966d6e0791c5804ed5cbec116594ebb72e9633118c31458dfa16181fdd01b2'
             'c7ca64dbd9a8f3f0271c12739807021a5c0782d254c4142c6e86746a96a44438'
             '2850af66e34003415e86b4f17c24e117b221f64ab98e1cef45b5102c9c48350d'
             '004842e88cbbc76d09356fbddf5bc123b1b0fc7b2e64b8677b2a2316df7d9099'
@@ -71,7 +67,6 @@ apply_patch_with_msg() {
 prepare() {
   cd "${srcdir}/ogre-${pkgver}"
   apply_patch_with_msg \
-    002-link-shared-freeimage.patch \
     004-use-mingw-w64-directx.patch \
     010-missing-include.patch \
     015-export-symbols-samples-plugin.patch \
@@ -111,6 +106,7 @@ build() {
     -DOGRE_BUILD_COMPONENT_PROPERTY=ON \
     -DOGRE_BUILD_COMPONENT_PYTHON=ON \
     -DOGRE_BUILD_COMPONENT_CSHARP=OFF \
+    -DOGRE_BUILD_PLUGIN_FREEIMAGE=OFF \
     -DOGRE_CONFIG_DOUBLE=OFF \
     -DOGRE_BUILD_COMPONENT_JAVA=OFF \
     -DOGRE_BUILD_SAMPLES=ON \
