--- a/mingw-w64-geographiclib/PKGBUILD
+++ b/mingw-w64-geographiclib/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://geographiclib.sourceforge.io/"
 msys2_repository_url='https://github.com/geographiclib/geographiclib'
+msys2_references=(
+  'gentoo: sci-geosciences/GeographicLib'
+)
 license=('custom') # MIT/X11
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
