llvm: remove redundant helper

--- a/mingw-w64-llvm/PKGBUILD
+++ b/mingw-w64-llvm/PKGBUILD
@@ -77,7 +77,7 @@ source=("${_url}/llvm-${pkgver}.src.tar.xz"{,.sig}
         # 0301-0399 -> lld
         "0303-ignore-new-bfd-options.patch"
         # 0401-0499 -> clang-tools-extra
-        # 9901-9999 -> whole tree
+        # 0901-0999 -> whole tree
         "0901-wholearchive-import-libs.patch::https://github.com/llvm/llvm-project/commit/4a4a8a1476b1386b523dc5b292ba9a5a6748a9cf.patch"
         )
 sha256sums=('96f833c6ad99a3e8e1d9aca5f439b8fd2c7efdcf83b664e0af1c0712c5315910'
@@ -108,14 +108,6 @@ validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Googl
 noextract=(clang-${pkgver}.src.tar.xz)
 
 apply_patch_with_msg() {
-  for _patch in "$@"
-  do
-    msg2 "Applying ${_patch}"
-    patch -Nbp1 -i "${srcdir}/${_patch}"
-  done
-}
-
-apply_git_patch_with_msg() {
   for _patch in "$@"
   do
     msg2 "Applying ${_patch}"
@@ -176,8 +168,8 @@ prepare() {
   # Patch whole tree
   cd "${srcdir}"
 
-  apply_git_patch_with_msg \
-      "0901-wholearchive-import-libs.patch"
+  apply_patch_with_msg \
+    "0901-wholearchive-import-libs.patch"
 }
 
 build() {
