--- a/mingw-w64-blueprint-compiler/PKGBUILD
+++ b/mingw-w64-blueprint-compiler/PKGBUILD
@@ -3,17 +3,18 @@
 _realname=blueprint-compiler
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=0.14.0
-pkgrel=2
+pkgver=0.16.0
+pkgrel=1
 pkgdesc='A markup language for GTK user interfaces (mingw-w64)' 
 url='https://jwestman.pages.gitlab.gnome.org/blueprint-compiler/'
+msys2_repository_url='https://gitlab.gnome.org/jwestman/blueprint-compiler'
 license=('spdx:LGPL-3.0-or-later')
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=(${MINGW_PACKAGE_PREFIX}-python-gobject)
 makedepends=(${MINGW_PACKAGE_PREFIX}-meson)
 source=(https://gitlab.gnome.org/jwestman/blueprint-compiler/-/archive/v$pkgver/blueprint-compiler-v$pkgver.tar.gz)
-sha256sums=('05faf3810cb76d4e2d2382c6a7e6c8096af27e144e2260635c97f6a173d67234')
+sha256sums=('01feb8263fe7a450b0a9fed0fd54cf88947aaf00f86cc7da345f8b39a0e7bd30')
 
 build() {
   MSYS2_ARG_CONV_EXCL="--prefix=" \
