lilv: update to 0.24.26

--- a/mingw-w64-lilv/PKGBUILD
+++ b/mingw-w64-lilv/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=lilv
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.24.24
-pkgrel=2
+pkgver=0.24.26
+pkgrel=1
 pkgdesc='A C library with Python bindings for hosting LV2 plugins in applications (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,9 +21,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-libsndfile"
          "${MINGW_PACKAGE_PREFIX}-zix")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=(https://download.drobilla.net/${_realname}-${pkgver}.tar.xz{,.sig})
-sha256sums=('6bb6be9f88504176d0642f12de809b2b9e2dc55621a68adb8c7edb99aefabb4f'
+sha256sums=('22feed30bc0f952384a25c2f6f4b04e6d43836408798ed65a8a934c055d5d8ac'
             'SKIP')
 validpgpkeys=('907D226E7E13FA337F014A083672782A9BF368F3') # David Robillard <d@drobilla.net>
 
