serd: update to 0.32.4

--- a/mingw-w64-serd/PKGBUILD
+++ b/mingw-w64-serd/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=serd
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.32.2
+pkgver=0.32.4
 pkgrel=1
 pkgdesc='C library for RDF syntax supporting reading/ writing Turtle and NTriples (mingw-w64)'
 arch=('any')
@@ -16,9 +16,10 @@ url='https://drobilla.net/software/serd.html'
 license=("spdx:0BSD OR ISC")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=(https://download.drobilla.net/${_realname}-${pkgver}.tar.xz{,.sig})
-sha256sums=('df7dc2c96f2ba1decfd756e458e061ded7d8158d255554e7693483ac0963c56b'
+sha256sums=('cbefb569e8db686be8c69cb3866a9538c7cb055e8f24217dd6a4471effa7d349'
             'SKIP')
 validpgpkeys=('907D226E7E13FA337F014A083672782A9BF368F3') # David Robillard <d@drobilla.net>
 
@@ -32,6 +33,7 @@ build() {
       --auto-features=enabled \
       --buildtype=plain \
       -Ddocs=disabled \
+      -Dman_html=disabled \
       ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/meson compile
