sord: update to 0.16.18

--- a/mingw-w64-sord/PKGBUILD
+++ b/mingw-w64-sord/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=sord
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.16.16
+pkgver=0.16.18
 pkgrel=1
 pkgdesc='A lightweight C library for storing RDF data in memory (mingw-w64)'
 arch=('any')
@@ -19,9 +19,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-pcre2"
          "${MINGW_PACKAGE_PREFIX}-zix")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=(https://download.drobilla.net/${_realname}-${pkgver}.tar.xz{,.sig})
-sha256sums=('257f876d756143da02ee84c9260af93559d6249dd87f317e70ab5fffcc975fd0'
+sha256sums=('4f398b635894491a4774b1498959805a08e11734c324f13d572dea695b13d3b3'
             'SKIP')
 validpgpkeys=('907D226E7E13FA337F014A083672782A9BF368F3') # David Robillard <d@drobilla.net>
 
