Recover gdb-multiarch for i686

--- a/mingw-w64-gdb/PKGBUILD
+++ b/mingw-w64-gdb/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=gdb
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-multiarch"))
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-multiarch")
 pkgver=16.1
 pkgrel=1
 pkgdesc="GNU Debugger (mingw-w64)"
@@ -120,9 +120,7 @@ do_build() {
 
 build() {
   do_build
-  if [[ ${CARCH} != i686 ]]; then
-    do_build -multiarch --enable-targets=all
-  fi
+  do_build -multiarch --enable-targets=all
 }
 
 package_gdb() {
